feat: auction modal (#632)
* feat: use a feature flag + show the first version

* refactor: DRY coordinates code

* feat: first auction modal version (from terms)

* feat: translate terms modal. simplify css

* feat: improve base modal styles for all devices

* feat: DRY terms code

* feat: finish auction modal

* fix: correctly translate text with values

* fix: rebase

* feat: feedback

* refactor: new authorization selector

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -102,6 +102,16 @@
     "your_estate": "Your estate",
     "your_parcel": "Your parcel"
   },
+  "auction_modal": {
+    "authorize_contract": "Authorize contract",
+    "authorized_explanation":
+      "You're all set to begin! If you need more information on how to use the auction, you can read the {blog_post_link}.",
+    "blog_post": "Blog post",
+    "first_time_explanation":
+      "To participate in this new auction, you'll need to authorize the new {contract_link} contract. You can read all about it on the {blog_post_link}.",
+    "lets_go": "Lets go!",
+    "title": "Decentraland Auction"
+  },
   "auction_page": {
     "bid": "Bid",
     "description": "Select LAND to buy",
@@ -407,6 +417,18 @@
       "mobile":
         "You can use mobile browsers such as {coinbase_link} or {imtoken_link}."
     }
+  },
+  "terms_modal": {
+    "also_agree":
+      "You also agree to our {privacy_policy_link}, which describes how we process your information.",
+    "by_agreeing":
+      "By choosing \"I agree\" below, you agree to our {terms_of_service_link}.",
+    "explanation":
+      "This dApp interacts with a decentralized exchange that runs on the Ethereum blockchain.",
+    "i_agree": "I agree",
+    "privacy_policy": "Privacy Policy",
+    "terms_of_service": "Terms of Service",
+    "title": "Welcome to Decentraland's LAND Marketplace"
   },
   "transaction": {
     "buy": "You bought {parcel_link}",
