--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -105,6 +105,15 @@
     "your_estate": "Votre domaine",
     "your_parcel": "Votre parcelle"
   },
+  "auction_modal": {
+    "authorize_contract": "Autoriser le contrat",
+    "authorized_explanation": "Vous êtes prêt à commencer! ",
+    "blog_post": "Article de blog",
+    "first_time_explanation":
+      "Pour participer à cette nouvelle vente aux enchères, vous devez autoriser le nouveau contrat {contract_link}. ",
+    "lets_go": "Allons-y!",
+    "title": "Decentraland Enchère"
+  },
   "auction_page": {
     "bid": "Offre",
     "description": "Sélectionnez LAND à acheter",
@@ -415,6 +424,18 @@
       "mobile":
         "Vous pouvez utiliser des navigateurs mobiles tels que {coinbase_link} ou {imtoken_link}."
     }
+  },
+  "terms_modal": {
+    "also_agree":
+      "Vous acceptez également notre {privacy_policy_link}, qui décrit comment nous traitons vos informations.",
+    "by_agreeing":
+      "En choisissant \"Je suis d'accord\" ci-dessous, vous acceptez notre {terms_of_service_link}.",
+    "explanation":
+      "Cette application interagit avec un échange décentralisé qui s'exécute sur la blockchain Ethereum.",
+    "i_agree": "Je suis d'accord",
+    "privacy_policy": "Politique de confidentialité",
+    "terms_of_service": "Conditions d'utilisation",
+    "title": "Bienvenue sur le marché LAND de Decentraland"
   },
   "transaction": {
     "buy": "Vous avez acheté {parcel_link}",
