--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -105,8 +105,11 @@
     "title": "Decentraland拍卖"
   },
   "auction_page": {
+    "available_parcels": "可用包裹",
     "bid": "出价",
     "description": "选择LAND购买",
+    "fetching": "正在获取...",
+    "find_available_parcel": "查找可用包裹",
     "gas_price": "天然气价格",
     "land_price": "LAND价格",
     "maximum_parcels_message":
