--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -113,13 +113,13 @@
     "available_parcels": "利用可能な小包",
     "bid": "入札",
     "description": "購入するLANDを選択",
-    "fetching": "取得中...",
     "find_available_parcel": "利用可能な小包を見つける",
     "gas_price": "ガス価格",
     "land_price": "LAND価格",
     "maximum_parcels_message":
       "単一のトランザクションで{max} LAND以上を購入しようとすると失敗します。",
     "maximum_parcels_title": "1トランザクションあたり最大LANDに達しました",
+    "searching": "検索中...",
     "title": "未所有のLANDを購入する",
     "total_price": "合計金額"
   },
