feat: sold label

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -125,6 +125,7 @@
     "searching": "Searching...",
     "title": "LAND Cart",
     "token": "Token",
+    "sold": "Sold",
     "total_price": "Total price"
   },
   "authorization": {
