--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -127,6 +127,7 @@
     "searching": "Buscando...",
     "title": "Carro de compras de LAND",
     "token": "Token",
+    "sold": "Vendido",
     "total_price": "Precio total"
   },
   "authorization": {
