--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -129,6 +129,7 @@
     "searching": "Recherche...",
     "title": "LAND panier",
     "token": "Jeton",
+    "sold": "Vendu",
     "total_price": "Prix ​​total"
   },
   "authorization": {
