--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -125,6 +125,7 @@
     "searching": "수색...",
     "title": "장바구니에 넣기",
     "token": "토큰",
+    "sold": "판매 된",
     "total_price": "총 가격"
   },
   "authorization": {
