--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -117,6 +117,7 @@
     "searching": "搜索...",
     "title": "LAND购物车",
     "token": "代币",
+    "sold": "出售",
     "total_price": "总价"
   },
   "authorization": {
